--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -84,8 +84,8 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --global user.email "abhishek@gmail.com"
-        git config --global user.name "Abhishek Veeramalla"
+        git config --global user.email "varshil@gmail.com"
+        git config --global user.name "Varshil Desai"
         git add helm/go-web-app-chart/values.yaml
         git commit -m "Update tag in Helm chart"
         git push      
