--- a/helm/go-web-app-chart/templates/deployment.yaml
+++ b/helm/go-web-app-chart/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: go-web-app
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: go-web-app
